--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html dir="rtl" lang="ar">
 <head>
 	<meta charset="UTF-8">
 <style>
@@ -39,7 +39,7 @@ var x = setInterval(function() {
     var seconds = Math.floor((distance % (1000 * 60)) / 1000);
     
     // Output the result in an element with id="demo"
-    document.getElementById("demo").innerHTML = months +" شهر : " + days + " بوم : " + hours + " ساعة : "
+    document.getElementById("demo").innerHTML = months +" شهر : " + days + " يوم : " + hours + " ساعة : "
     + minutes + " دقيقة : " + seconds + " ثانية ";
     
     // If the count down is over, write some text 
