--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@ p {
   text-align: center;
   font-size: 65px;
 }
+.box {
+background-color:mintcream;
+border-radius:5px;
+padding: 5px;
+inline-size: max-content;
+}
 </style>
 </head>
 <body>
 	
 	  
 <p id="head2">كتب كتابنا بعد 😂</p>
-<p id="demo2"></p>
+<p id="demo2" class="box"></p>
 <p id="head"> نودع العزوبية بعد 😂</p>
-<p id="demo"></p>
+<p id="demo" class="box"></p>
 
 <script>
 // Set the date we're counting down to
